--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,11 @@ body{
     width: 100%;
     height: 100%;
     font-family: 'Lato', sans-serif;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
+
+
 
 header{
     width: 100%;
@@ -20,6 +24,17 @@ header{
     background-color: #1C1C1C;
     position: fixed;
     z-index: 1;
+    transition: all .3s;
+}
+
+header.sticky{
+    height: 50px;
+    padding: 5px 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+header.sticky nav .logo-wrapper img{
+    height: 40px;
 }
 
 header nav{
@@ -31,6 +46,7 @@ header nav .logo-wrapper img{
     width: 100%;
     min-width: 100%;
     height: 50px;
+    transition: all .3s;
 }
 
 header nav ul{
@@ -54,13 +70,78 @@ header nav ul li a{
     color: white;
 }
 
+header nav ul li a.dropdown-mobile{
+    display: none;
+}
+
 header nav ul li a:hover{
     color: #05C886;
 }
-
-header nav ul li a img{
-    height: 5px;
+header nav ul li a:hover > svg{
+    fill: #05C886;
 }
+
+header nav ul li a svg{
+    height: 18px;
+    fill: white;
+    margin-left: 5px;
+}
+
+header nav ul li .active ~ .dropdown{
+    display: flex;
+    flex-direction: column;
+    width: 130px;
+    height: auto;
+    align-items: flex-start;
+    position: absolute;
+    background-color: #1C1C1C;
+    top: 65px;
+    padding: 0;
+    margin: 0;
+    transition: transform .3s ease-in-out;
+}
+
+header.sticky nav ul li .active ~ .dropdown{
+    transform: translateY(-15px);
+}
+
+header nav ul li .dropdown li{
+    width: 100%;
+    margin: 0;
+    padding: 5px 5px;
+    position: relative;
+}
+
+header nav ul li .dropdown li:hover > .dropdown-submenu{
+    width: 150px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: flex-start;
+    background-color: #1C1C1C;
+    top: 0;
+    left: 100%;
+    padding: 0;
+}
+
+header nav ul li .dropdown li .dropdown-submenu li{
+    width: 100%;
+    margin: 0;
+    padding: 5px 5px;
+}
+
+
+header .nav-links .dropdown{
+    display: none;
+}
+
+
+header .nav-links .dropdown li > .dropdown-submenu{
+    display: none;
+}
+
+
 
 
 
@@ -181,46 +262,22 @@ header nav ul li a img{
 
 footer{
     width: 100%;
-    height: 300px;
+    height: 100%;
     background-color: #1C1C1C;
-    position: relative;
+    padding: 50px 0 0 0;
 }
 
 footer .container{
     width: 100%;
     height: 100%;
-    position: relative;
 }
 
 footer .container .content{
     height: 100%;
 }
 
-footer .copyright{
-    text-align: center;
-    position: absolute;
-    margin: 24px 0;
-}
 
-footer .copyright p{
-    color: white;
-    margin: 0;
-}
-
-footer .container .logo-wrapper img{
-    height: 65px;
-}
-
-footer .container .links{
-
-}
-
-
-footer .container .links .social-media{
-
-}
-
-footer .container .links .social-media .insta{
+footer .container .social-media .insta{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -230,7 +287,7 @@ footer .container .links .social-media .insta{
     font-size: 1rem;
 }
 
-footer .container .links .social-media .insta .icon-wrapper{ 
+footer .container  .social-media .insta .icon-wrapper{ 
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -241,9 +298,26 @@ footer .container .links .social-media .insta .icon-wrapper{
     margin: 5px 0;
 }
 
-footer .container .links .social-media .insta .icon-wrapper img{
+footer .container .social-media .insta .icon-wrapper img{
     width: 100%;
     height: 30px;
+}
+
+footer .content .copyright{
+    text-align: center;
+    margin: 30px 0 20px 0;
+}
+
+footer .content .copyright p,
+footer .content .copyright a{
+    color: white;
+    margin: 0;
+    text-decoration: none;
+    line-height: 2;
+}
+
+footer .content .copyright a:hover{
+    color: #05C886;
 }
 
 
@@ -254,18 +328,12 @@ footer .container .links .social-media .insta .icon-wrapper img{
     header{
         position: fixed;
     }
-    
-    /* header nav .logo-wrapper img{
-        width: 100%;
-        min-width: 100%;
-        height: 50px;
-    }
-     */
 
     header nav .btn-menu{
         z-index: 10;
         position: absolute;
         right: 30px;
+        cursor: pointer;
     }
 
     header nav .btn-menu > span{
@@ -318,20 +386,22 @@ footer .container .links .social-media .insta .icon-wrapper img{
         right: 0;
         background-color: #1C1C1C;
         padding: 65px 10px;
-        transition: transform .5s ease-in;
+        transition: all .5s ease-in;
         transform: translateX(100%);
+        opacity: .5;
     }
 
     header nav ul.active{
 
         transform: translateX(0);
+        opacity: 1;
 
     }
     
     header nav ul li{
         width: 100%;
         height: 50px;
-        
+        margin: 5px 0;
     }
     
     header nav ul li a{
@@ -342,13 +412,39 @@ footer .container .links .social-media .insta .icon-wrapper img{
         padding: 5px 10px;
         color: white;
     }
-    
-    header nav ul li a:hover{
-        color: #05C886;
+
+    header nav ul li#submenu a{
+        height: min-content;
     }
-    
-    header nav ul li a img{
-        height: 5px;
+
+    header nav ul li#submenu a:hover > :nth-child(1){
+        color: white;
+    }
+
+    header nav ul li a.dropdown-mobile{
+        display: block;
+        margin-left: 30px;
+        height: min-content;
+        padding: 10px 0;
+        font-size: .95em;
+    }
+
+    header nav ul li#submenu{
+        position: relative;
+        height: min-content;
+    }
+
+    header .nav-links li a.active ~ .dropdown{
+        display: none;
+    }
+        
+
+}
+
+@media (max-width: 768px){
+
+    main{
+        padding: 0 20px;
     }
 
 }
